add See more button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
                 <input class="filter-form__input" type="text" name="filter" id="filter">
             </form>
             <div class="card-list" id="card-list"></div>
+            <div class="action">
+                <button class="button button_mode" type="button">See more
+                <svg width="7" height="17" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 1L5.043 8.41667L1 15.8333" stroke="#363636" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+                </button>
+            </div>
         </div>
     </div>
 <script type="text/javascript" src="main.js"></script></body>
