--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,9 @@
                 <label class="filter-form__label" for="filter">Filter</label>
                 <input class="filter-form__input" type="text" name="filter" id="filter">
             </form>
-            <div class="card-list" id="card-list"></div>
+            <div class="card-list" id="card-list">
+                <div class="lds-facebook"><div></div><div></div><div></div></div>
+            </div>
             <div class="action">
                 <button class="button button_mode" type="button">See more
                 <svg width="7" height="17" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
