adds demo for prettyXml

--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Latest Developments</title>
-    <meta name="description" content="Our Latest Developments">
-<link href="./css/style.css" rel="stylesheet"></head>
-<body >
-    <div class="container">
-        <div class="page">
-            <h1 class="page__title">Our Latest Developments</h1>
-            <form action="#search" id="filter-form" class="filter-form">
-                <label class="filter-form__label" for="filter">Filter</label>
-                <input class="filter-form__input" type="text" name="filter" id="filter">
-            </form>
-            <div class="card-list" id="card-list">
-                <div class="lds-facebook"><div></div><div></div><div></div></div>
-            </div>
-            <div class="action">
-                <button class="button button_mode" type="button">See more
-                <svg width="7" height="17" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 1L5.043 8.41667L1 15.8333" stroke="#363636" stroke-width="2" stroke-linecap="round"/>
-                </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-<script type="text/javascript" src="main.js"></script></body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pretty Xml for Vue 3</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
